# tigerbeetle-cmake

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.c
